# rpi_mrf24

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  config_radio.sh  config_tx.sh  data.txt  data1.txt  gitCommit.sh  main.cpp  repeatCmd.sh  spi.cpp
examples/TX_only/: TX_only.pde.txt
exec/: config_radio.sh
flow/: diagram_mrf24.dio
helps/: Makefile.bkp  Makefile.bkp2  commands_git.txt  tree.txt
helps/makefiles_bkp/: Makefile.bkp3  Makefile.bkp5  Makefile.bkp7
helps/mrf/: radio.h
install/: installLibs.sh
install/bcm2835-1.71/: config.status
libs/: Makefile  file.h  run.cpp  run.h
libs/app/: Makefile  config.h  run.cpp  run.h  work.cpp  work.h
libs/data/: data_analisis.h
libs/files/: database.cpp  file.cpp  file.h
libs/mrf24/: mrf24j40.cpp  mrf24j40.h  mrf24j40_settings.h  mrf24j40_template.tpp  radio.cpp  radio.h
libs/oled/: Makefile  oled.cpp  oled.h
libs/others/: gpio.cpp  gpio.h  tyme.cpp  tyme.h
libs/qr/: Makefile  qr.cpp  qr.h  qr_img.cpp  qr_img.h
libs/spi/: Makefile  database.cpp  file.cpp  gpio.cpp  run.cpp  spi.cpp  spi_dbg.cpp  tyme.cpp
libs/src/: cmd_mrf24j40.h  color.h  config.h  database.cpp  database.h  dbg.h  debug.cpp  debug_spi.cpp  file.h  (+24 more)
move/: debug_spi.cpp  gpio.cpp
mrf/: dbg.h  debug_spi.cpp  radioAddress.h  run.h
mrf24_prj/: main.cpp
project/: main.cpp
scripts/: commands_mosquitto.sh  config_radio.sh  dependeciesLibs.sh  gpio.sh  mosquitto.sh  rules.gdb  search_git_date.sh
src/: main.cpp
success/: app_32_mrf_rx  app_64_mrf_tx  file1  file2  gpio.cpph  gpio.hppd
usr/: Makefile  readme_lib.md
(+125 files in other folders)
